# tiny_autodf

./: CMakeLists.txt  README.md  tiny_autodf.h
test/: CMakeLists.txt  autodf_test.cpp
